[tool.poetry]
name = "pywarsaw"
version = "0.1.0"
description = "An unofficial asynchronous API wrapper for Warsaw Open Data - https://api.um.warszawa.pl/"
authors = ["brozen <szymon.mazurkievicz@gmail.com>"]
license = "MIT"
homepage = "https://github.com/BrozenSenpai/pywarsaw"
documentation = "https://pywarsaw.readthedocs.io/en/latest/"
keywords = ["Warsaw"]
readme =  "README.md"

[tool.poetry.dependencies]
python = "^3.9"
attrs = "^22.2.0"
aiohttp = "^3.8.3"
aiohttp-client-cache = "^0.8.1"
aiosqlite = "^0.18.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.1"
aioresponses = "^0.7.4"
pytest-asyncio = "^0.20.3"
Sphinx = "^4.0.0"
sphinx-rtd-theme = "^1.1.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
